Se dio funcionamiento al juego y se arreglo parte de la estructura html

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -8,15 +8,17 @@
 <body>
     <div class="container">
         <div class="boot">
-            <img src="../img/pidra.jpg" alt="">
-            <img src="../img/papel.jpg" alt="">
-            <img src="../img/tijera.jpg" alt="">
+            <button id="piedra" class=""><img  src="../img/pidra.jpg" alt=""></button>
+            <button id="papel" class=""><img  src="../img/papel.jpg" alt=""></button>
+            <button id="tijera" class=""><img  src="../img/tijera.jpg" alt=""></button>
         </div>
         <div class="jugador">
-            <button><img src="../img/pidra.jpg" alt=""></button>
-            <button><img src="../img/papel.jpg" alt=""></button>
-            <button><img src="../img/tijera.jpg" alt=""></button>
+            <button id="mipiedra" class="sobre" ><img src="../img/pidra.jpg" alt=""></button>
+            <button id="mipapel" class="sobre" ><img src="../img/papel.jpg" alt=""></button>
+            <button id="mitijera" class="sobre" ><img src="../img/tijera.jpg" alt=""></button>
         </div>
     </div>
+
+    <script src="../JS/script.js"></script>
 </body>
 </html>
