--- a/HTML/index.html
+++ b/HTML/index.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Piedra, papel o tijeras</title>
+    <link rel="stylesheet" href="../CSS/styles.css">
 </head>
 <body>
     <div class="container">
         <div class="boot">
-            <button id="piedra" class=""><img  src="../img/pidra.jpg" alt=""></button>
-            <button id="papel" class=""><img  src="../img/papel.jpg" alt=""></button>
-            <button id="tijera" class=""><img  src="../img/tijera.jpg" alt=""></button>
+            <img class="logoBoot" src="../img/boot/inicio.gif" alt="">
+            <img class="eleccionB" src="../img/ppt.jpg" alt="">
         </div>
         <div class="jugador">
-            <button id="mipiedra" class="sobre" ><img src="../img/pidra.jpg" alt=""></button>
+            <button id="mipiedra" class="sobre" ><img src="../img/piedra.jpg" alt=""></button>
             <button id="mipapel" class="sobre" ><img src="../img/papel.jpg" alt=""></button>
             <button id="mitijera" class="sobre" ><img src="../img/tijera.jpg" alt=""></button>
         </div>
