Se añadio un estilo mas personalisado al juego y se añadieron ciertos funcionamientos adicionales

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -8,6 +8,15 @@
 </head>
 <body>
     <div class="container">
+        <div class="inicio">
+            <h1>¡Bienvenido a Piedra, Papel o Tijeras!</h1>
+            <label for="nombre"><b>Nombre del jugador</b></label>
+            <br>
+            <input type="text" id="nombre">
+            <br>
+            <button onclick="comenzar()">Comenzar</button>
+        </div>
+        </div>
         <div class="boot">
             <img class="logoBoot" src="../img/boot/inicio.gif" alt="">
             <img class="eleccionB" src="../img/ppt.jpg" alt="">
